<resources>
    <string name="app_name">AllRound</string>
    <string name="hello_from_xml">Hello from xml</string>
    <string name="background_image">background image</string>
    <string name="calculator">Calculator</string>
    <string name="login">Sign In</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">or</string>
    <string name="sign_in_logo">SignIn Logo</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="please_enter_correct_credentials">Please enter correct credentials</string>
    <string name="none">none</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_something">write something...</string>
    <string name="pass_message_to_educ">Pass message to Educ</string>
    <string name="home_message">This app helps us plan and monitor our everyday life in a better way. It has sections put above to manage different aspects of our needs, this includes health, fitness, finances, even a simple calculator available easily at a click of a button. \n\nCreated by Amanuel for you.</string>
    <string name="title">This is Home</string>
    <string name="audio_call">Audio call</string>
    <string name="video_call">Video call</string>
    <string name="search">Search</string>
    <string name="bio_message">Hey there! I am using WhatsApp.</string>
    <string name="profile_picture">Profile picture</string>
    <string name="user_name">John Electronics</string>
    <string name="phone_number">+9715678763986</string>
    <string name="go_back">Go back</string>
    <string name="more_options">More options</string>
    <string name="last_seen">Last seen Mon 4:49 pm</string>
    <string name="notifications">Notifications</string>
    <string name="media_visibility">Media Visibility</string>
    <string name="encryption">Encryption</string>
    <string name="encryption_description">Messages and calls are end-to-end encrypted. Tap to verify.</string>
    <string name="disappearing_messages">Disappearing Messages</string>
    <string name="off">Off</string>
    <string name="chat_lock">Chat Lock</string>
    <string name="chat_lock_description">Lock and hide this chat on this device</string>
    <string name="advanced_chat_privacy">Advanced Chat Privacy</string>
    <string name="group_create_header">No groups in common</string>
    <string name="create_group">Create Group</string>
    <string name="create_group_message">Create group with John Electronics</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="add_to_list">Add to list</string>
    <string name="block_message">Block John Electronics</string>
    <string name="report_message">Report John Electronics</string>
    <string name="unknown">Unknown</string>
    <string name="user_details">user details</string>
    <string name="user_messages">user messages</string>
    <string name="camera">camera</string>
    <string name="my_chat_app">MyChatApp</string>
    <string name="unkown">Unknown</string>
    <string name="media_links_and_docs">Media, links, and docs</string>
    <string name="recent_calls_title">Calls</string>
    <string name="more">More</string>
    <string name="favourites">Favourites</string>
    <string name="contacts">%1$d Contacts</string>
    <string name="you">You</string>
    <string name="openDrawer">Open Navigation Drawer</string>
    <string name="closeDrawer">Close Navigation <Drawer></Drawer></string>


    <string-array name="numbers_array">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>


    <string-array name="country_codes">
        <item>us</item>
        <item>ar</item>
        <item>au</item>
        <item>at</item>
        <item>be</item>
        <item>br</item>
        <item>bg</item>
        <item>ca</item>
        <item>cn</item>
        <item>co</item>
        <item>cu</item>
        <item>cz</item>
        <item>eg</item>
        <item>fr</item>
        <item>de</item>
        <item>gr</item>
        <item>hk</item>
        <item>hu</item>
        <item>in</item>
        <item>id</item>
        <item>ie</item>
        <item>il</item>
        <item>it</item>
        <item>jp</item>
        <item>lv</item>
        <item>lt</item>
        <item>my</item>
        <item>mx</item>
        <item>ma</item>
        <item>nl</item>
        <item>nz</item>
        <item>ng</item>
        <item>no</item>
        <item>ph</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>ru</item>
        <item>sa</item>
        <item>rs</item>
        <item>sg</item>
        <item>sk</item>
        <item>si</item>
    </string-array>

    <string-array name="country_names">
        <item>USA</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>Czechia</item>
        <item>Egypt</item>
        <item>France</item>
        <item>Denmark</item>
        <item>Greenland</item>
        <item>Honk kong</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Netherlands</item>
        <item>New zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>South Africa</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>



    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>