<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.chat_detail.ChatDetailFragment"
    android:background="@drawable/blackwall"
    >
    <View
        android:id="@+id/whole_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/profiles"
        />
  <LinearLayout
      android:id="@+id/profiles"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintHorizontal_bias="0"
      android:padding="10dp"
      >
      <ImageView
          android:id="@+id/go_back"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:contentDescription="@string/go_back"
          android:src="@drawable/left_arrow"
          android:layout_gravity="center"
          app:tint="@color/white"
          />
      <ImageView
          android:id="@+id/user_profile"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_layout"
          android:contentDescription="@string/profile_picture"
          android:src="@drawable/profile_picture"
          android:layout_marginHorizontal="5dp"
          />
      <TextView
          android:id="@+id/user_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:ellipsize="end"
          android:lines="1"
          android:text="@string/user_name"
          android:textSize="11sp"
          android:textColor="@color/white"
          />
  </LinearLayout>

    <LinearLayout
        android:id="@+id/header_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profiles"
        android:padding="10dp"
        >
        <ImageView
            android:id="@+id/camera"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/camera"
            android:src="@drawable/camera"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            app:tint="@color/white"
            />
        <ImageView
            android:id="@+id/audio_call"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/audio_call"
            android:src="@drawable/audio_call"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            app:tint="@color/white"
            />
        <ImageView
            android:id="@+id/more_options"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/more_options"
            android:src="@drawable/more"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            app:tint="@color/white"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>