<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.recent_calls.RecentCallsFragment"
    android:background="@color/almost_black"
    android:padding="15dp">

    <TextView
        android:id="@+id/recent_calls_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/recent_calls_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        />
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/recent_calls_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginBottom="10dp"
        >
        <ImageView
            android:id="@+id/search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/search"
            android:src="@drawable/search_icon"
            app:tint="@color/white"
            />
        <ImageView
            android:id="@+id/more_options"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/more_options"
            android:src="@drawable/more"
            app:tint="@color/white"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/favourites_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:text="@string/favourites"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        />
    <LinearLayout
        android:id="@+id/favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/recent_calls_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintHorizontal_bias="1"
        >

        <TextView
            android:id="@+id/more_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_text_layout"
            android:backgroundTint="@color/almost_black"
            android:padding="10dp"
            android:text="@string/more"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favourites"
        >

    </ListView>


</androidx.constraintlayout.widget.ConstraintLayout>