<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ContactsListActivity">

    <RelativeLayout
        android:id="@+id/header_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewMessages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/go_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/go_back"
            android:src="@drawable/left_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userProfile"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_toEndOf="@id/go_back"
            android:transitionName="profile_pic"
            android:background="@drawable/rounded_layout"
            app:shapeAppearanceOverlay="@style/RoundedCornersImageView"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/profile_picture" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/userProfile"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >
            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="13sp"
                />
            <TextView
                android:id="@+id/userDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_seen"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="12sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentEnd="true"
            >
            <ImageView
                android:id="@+id/video_call"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="5dp"
                android:contentDescription="@string/search"
                android:src="@drawable/video_call_whatsapp"

                app:tint="@color/white" />
            <ImageView
                android:id="@+id/audio_call"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/search"
                android:src="@drawable/audio_call"
                android:layout_marginHorizontal="5dp"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/more_options"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="5dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/more_options"
                android:src="@drawable/more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/whatsapp_button_background"
        app:layout_constraintTop_toBottomOf="@+id/header_content">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>