<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:layout_margin="20dp"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="italic|bold"
        android:textSize="50sp"
        android:textColor="#035"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="9dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:paddingHorizontal="5dp"
        >

        <EditText
            android:id="@+id/messageToEduc"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="51dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:background="@drawable/rounded_input_layout"
            android:hint="@string/write_something"
            android:paddingHorizontal="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/sendToEducBtn"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_layout"
            android:text="@string/pass_message_to_educ"
            android:textAllCaps="false"
            android:textSize="12sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="0dp"
        android:background="@drawable/rounded_text_layout"
        android:backgroundTint="#09000000"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:shadowColor="#549"
        android:shadowRadius="1"
        android:text="@string/home_message"
        android:textAlignment="center"
        android:textColor="#233"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputs" />

</androidx.constraintlayout.widget.ConstraintLayout>